<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_horizontal"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TableLayout
        android:id="@+id/table_layout"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:padding="@dimen/detail_row_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_span="2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edittext_title_hint" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:id="@+id/deadline_row"
            android:padding="@dimen/detail_row_padding"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginEnd="@dimen/table_detail_column_spacing"
                android:src="@drawable/ic_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_deadline_description" />
            <TextView
                android:id="@+id/deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/textview_deadline_hint"
                android:text="@string/textview_deadline_default" />
        </TableRow>

        <TableRow
            android:id="@+id/tags_row"
            android:padding="@dimen/detail_row_padding"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginEnd="@dimen/table_detail_column_spacing"
                android:src="@drawable/ic_tags"
                android:contentDescription="@string/icon_deadline_description" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edittext_tags_hint" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>

